# cvqoi

./: README.md
include/cvqoi/: CVQoi.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp  qoi.h
